force-app/main/default/objects/Contract_Price__c/Contract_Price__c.object-meta.xml
<CustomObject>
    <label>Contract Price</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Contract Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>