force-app/main/default/objects/Contract_Price__c/fields/Banner_weight_KB_from__c.field-meta.xml
<CustomField>
    <fullName>Banner_weight_KB_from__c</fullName>
    <label>Banner weight (KB) from</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>