force-app/main/default/objects/Contract_Price__c/fields/Compare_Dates__c.field-meta.xml
<CustomField>
    <fullName>Compare_Dates__c</fullName>
    <formula>IF(Contract__r.Effective_date__c != Starting_Date__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare Dates</label>
    <type>Checkbox</type>
</CustomField>