force-app/main/default/objects/Contract_Price__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Prices</relationshipLabel>
    <relationshipName>Contract_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>