force-app/main/default/objects/Contract_Price__c/fields/End_of_Weight_Tier__c.field-meta.xml
<CustomField>
    <fullName>End_of_Weight_Tier__c</fullName>
    <label>End of Weight Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>