force-app/main/default/objects/Contract_Price__c/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template</label>
    <referenceTo>Invoice_Template__c</referenceTo>
    <relationshipLabel>Contract Prices</relationshipLabel>
    <relationshipName>Contract_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>