force-app/main/default/objects/Contract_Price__c/fields/Is_Price_Lower__c.field-meta.xml
<CustomField>
    <fullName>Is_Price_Lower__c</fullName>
    <formula>IF(Product_Price__r.RecordType.Name = &#39;Currency&#39;,Price__c &lt;  MInimum_Price_Currency__c , Price_Percent__c &lt; Minimum_Price_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Price Lower</label>
    <type>Checkbox</type>
</CustomField>