force-app/main/default/objects/Contract_Price__c/fields/Main_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Main_Contract_Price__c</fullName>
    <description>This field filled by Multiple_Billing_Resource__c.Main_Billing_Resource__c</description>
    <label>Main Contract Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>