force-app/main/default/objects/Contract_Price__c/fields/MInimum_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>MInimum_Price_Currency__c</fullName>
    <label>MInimum Price Currency</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>