force-app/main/default/objects/Contract_Price__c/fields/Minimum_Price_Percent__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price_Percent__c</fullName>
    <label>Minimum Price Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>