force-app/main/default/objects/Contract_Price__c/fields/Multiple_Billing_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Billing_Resource_Name__c</fullName>
    <label>Multiple Billing Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>