force-app/main/default/objects/Contract_Price__c/fields/Navision_Price__c.field-meta.xml
<CustomField>
    <fullName>Navision_Price__c</fullName>
    <formula>IF( ISPICKVAL(Billing_Resource__r.Base_Unit_of_Measure__c, &#39;BUDGET&#39;), TEXT(Price__c *100)   &amp;&#39;%&#39;, TEXT(CurrencyIsoCode) &amp;&quot; &quot;&amp; IF(Price__c &gt; 1,  IF( 
  Price__c &gt;= 1000000, 
  TEXT(FLOOR(Price__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Price__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Price__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Price__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Price__c , 1) * 100 &lt; 10, 
  &quot;&quot; &amp; TEXT(ROUND(MOD(Price__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Price__c , 1), 2) * 100, 99)) 
), &quot;0&quot;&amp;TEXT(Price__c)))</formula>
    <label>Navision Price</label>
    <type>Text</type>
</CustomField>