force-app/main/default/objects/Contract_Price__c/fields/Price_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_Code__c</fullName>
    <formula>Billing_Resource__r.Resource_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Code</label>
    <type>Text</type>
</CustomField>