force-app/main/default/objects/Contract_Price__c/fields/Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Price</label>
    <referenceTo>Product_Price__c</referenceTo>
    <relationshipLabel>Contract Prices</relationshipLabel>
    <relationshipName>Contract_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>