force-app/main/default/objects/Contract_Price__c/fields/ProductCustom__c.field-meta.xml
<CustomField>
    <fullName>ProductCustom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Contract Prices</relationshipLabel>
    <relationshipName>Contract_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>