force-app/main/default/objects/Contract_Price__c/fields/Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Status__c</fullName>
    <description>Picklist used for imports/updates/deletes from .csv file.</description>
    <label>Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Record Created</fullName>
            </value>
            <value>
                <fullName>Record Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>