force-app/main/default/objects/Contract_Price__c/fields/Rich_media_weight__c.field-meta.xml
<CustomField>
    <fullName>Rich_media_weight__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(Tier_Type__c))),
			IF(Banner_weight_KB_to__c != 0, TEXT(Banner_weight_KB_from__c) &amp; &#39; - &#39;&amp; TEXT(Banner_weight_KB_to__c), TEXT(Banner_weight_KB_from__c) &amp; &#39; - N/A&#39;),
			&#39;&#39;
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rich media weight</label>
    <type>Text</type>
</CustomField>