force-app/main/default/objects/Contract_Price__c/fields/Static__c.field-meta.xml
<CustomField>
    <fullName>Static__c</fullName>
    <label>Static</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>