force-app/main/default/objects/Contract_Price__c/fields/Unit_of_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Code__c</fullName>
    <label>Unit of Measure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>