force-app/main/default/objects/Contract_Price__c/fields/Weight_Tier__c.field-meta.xml
<CustomField>
    <fullName>Weight_Tier__c</fullName>
    <label>Additional increment size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>