force-app/main/default/objects/Contract_Price__c/validationRules/AdditionIncrementSizeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>AdditionIncrementSizeValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Tier_Type__c, &#39;Additional&#39;),  ISNULL(Weight_Tier__c ))</errorConditionFormula>
    <errorDisplayField>Weight_Tier__c</errorDisplayField>
    <errorMessage>Additional increment size required if Tier Type: &quot;Additional&quot;</errorMessage>
</ValidationRule>