force-app/main/default/objects/Contract_Price__c/validationRules/StartDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateValidation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(Starting_Date__c &lt; TODAY(), DAY(Starting_Date__c) !=1),  ISNULL(Ending_Date__c))</errorConditionFormula>
    <errorDisplayField>Starting_Date__c</errorDisplayField>
    <errorMessage>Select only 1st day of the month</errorMessage>
</ValidationRule>