force-app/main/default/objects/Contract_Price__c/validationRules/Validate_End_Volum.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Volum</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Tier_Type__c, &#39;Main&#39;), ISNULL(Volume_to__c))</errorConditionFormula>
    <errorDisplayField>Volume_to__c</errorDisplayField>
    <errorMessage>Field is Required when tier type is &#39;Main&#39;</errorMessage>
</ValidationRule>